# ZDesktopManager

./: .gitignore  CMakeLists.txt  README.md  ZDesktopManager.cpp  ZDesktopManager.h  build.gradle.kts  settings.gradle.kts
docs/guide/: Guide.md
src/: ZDesktopManager.cpp  ZDesktopManager.h
src/main/kotlin/top/ntutn/: DesktopFolderWindow.kt  Main.kt
src/main/kotlin/top/ntutn/ui/: JNAMessageBox.kt
src/main/kotlin/top/ntutn/util/: ApplicationUtil.kt  IconUtil.kt  Shell32Extend.kt  User32Extend.kt  User32ExtendFlags.kt
